<resources>
    <string name="app_name">Statistics And Analysis</string>
    <string name="mean_median_mode">Mean, Median, Mode</string>
    <string name="grouped_mean_median_mode">Grouped Mean, Median, Mode</string>
    <string name="deviations_and_variance">Deviations and Variance</string>
    <string name="binomial_distribution">Binomial Distribution</string>
    <string name="poisson_distribution">Poisson Distribution</string>
    <string name="linear_regression">Linear Regression</string>
    <string name="correlation_coefficient">Correlation Coefficient</string>
    <string name="z_score_and_t_score">Z-score</string>
    <string name="permutation_and_combination">Permutation and Combination</string>
    <string name="f_test">F-test</string>
    <string name="t_score">T-score</string>
    <string name="chi_square_test">Chi-Square Test</string>
    <string name="mean">Enter The Data</string>
    <string name="click">click</string>
    <string name="enter_the_value">Enter the Value</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="enter_the_class_interval">Enter the class interval</string>
    <string name="enter_the_frequency">Enter the frequency</string>
    <string name="enter_no_of_events_n">Enter no. of events (n)</string>
    <string name="enter_positive_probability">Enter positive Probability (p)</string>
    <string name="enter_negative_probability">Enter negative Probability (q)</string>
    <string name="enter_probability_value_x">Enter Probability Value (x)</string>
    <string name="enter_the_mean_value_m">Enter the mean value (m)</string>
    <string name="enter_values_of_x">Enter values of x</string>
    <string name="enter_no_of_elements_n">Enter no. of elements (n)</string>
    <string name="enter_for_how_many_elements">Enter for how many elements (r)</string>
    <string name="enter_the_observe_frequencies">Enter the Observe frequencies</string>
    <string name="enter_the_sample_mean">Enter the sample mean</string>
    <string name="enter_population_mean">Enter Population mean</string>
    <string name="sample_standard_deviation">Sample Standard Deviation</string>
    <string name="enter_the_sample_size">Enter the Sample Size</string>
    <string name="enter_z_score_of_x">Enter Z-score of (x)</string>
    <string name="enter_the_standard_deviation">Enter the standard deviation</string>
    <string name="enter_x_values_for_variance1">Enter x values for variance1</string>
    <string name="enter_frequency_values_for_variance1">Enter frequency values for variance1</string>
    <string name="enter_x_values_for_variance2">Enter x values for variance2</string>
    <string name="enter_mean_1">Enter mean 1</string>
    <string name="enter_mean_2">Enter mean 2</string>
    <string name="enter_frequency_values_for_variance2">Enter frequency values for variance2</string>
</resources>
