<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_the_class_interval"
        android:textColor="#000"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            tools:ignore="Autofill,LabelFor"
            android:inputType="numberDecimal"
            android:id="@+id/edit1"/>

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="-"
            tools:ignore="HardcodedText"
            android:textSize="30sp"
            android:textColor="#000"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            tools:ignore="Autofill,LabelFor"
            android:inputType="numberDecimal"
            android:id="@+id/edit2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enter"
            android:id="@+id/enter1"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle"
            android:id="@+id/cancel1"/>

    </LinearLayout>

</LinearLayout>