<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".One"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6494979048790657/2420754522">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/mean"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="#000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:background="#EE83EE"
                    android:onClick="btn1"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/tv1"
                android:textColor="#fcf9f9"
                android:background="#000"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#34BAF7"
                android:textColor="#fffeff"
                android:padding="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/cal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:textColor="#fcf9f9"
                android:background="#000"
                android:id="@+id/tv2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#34BAF7"
                android:textColor="#fffeff"
                android:padding="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/clear"
                android:onClick="clear"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>