<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ten"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize,UselessLeaf">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6494979048790657/2420754522">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/enter_x_values_for_variance1"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="#000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:background="#EE83EE"
                    android:onClick="btn1"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/q1"
                android:textColor="#fcf9f9"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/enter_frequency_values_for_variance1"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="#000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="20dp"
                    android:background="#EE83EE"
                    android:onClick="btn2"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/q2"
                android:textColor="#fcf9f9"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_mean_1"
                    android:layout_margin="15dp"
                    android:textColor="#000"
                    android:textSize="30sp"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:id="@+id/q3"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:hint="x"
                    tools:ignore="Autofill,HardcodedText"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edit_shape"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/enter_x_values_for_variance2"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="#000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:background="#EE83EE"
                    android:onClick="btn3"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/q4"
                android:textColor="#fcf9f9"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/enter_frequency_values_for_variance2"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="#000"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="20dp"
                    android:background="#EE83EE"
                    android:onClick="btn4"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/q5"
                android:textColor="#fcf9f9"
                android:background="#000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_mean_2"
                    android:layout_margin="15dp"
                    android:textColor="#000"
                    android:textSize="30sp"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:id="@+id/q6"
                    android:ellipsize="start"
                    android:gravity="center"
                    android:hint="x"
                    tools:ignore="Autofill,HardcodedText"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edit_shape"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:textColor="#FCF9F9"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:background="#03A9F4"
                    android:onClick="cal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:textColor="#FCF9F9"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:background="#03A9F4"
                    android:onClick="clear"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#000"
                android:padding="20dp"
                android:id="@+id/q"
                android:textColor="#fcf9f9"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>